--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "@types/react": "^18.3.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   }
 }
