Excluded stories folder from build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
   "exclude": [
     "node_modules",
     "build",
+    "src/stories",
     "src/**/*.stories.tsx",
     "tests/**/*.test.tsx"
   ]
