--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   ],
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
-    "test": "jest",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -41,8 +42,14 @@
     "@storybook/react": "^8.3.0",
     "@storybook/react-webpack5": "^8.3.0",
     "@storybook/test": "^8.3.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.5",
     "css-loader": "^7.1.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -53,6 +60,7 @@
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
     "storybook": "^8.3.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.2"
   },
   "peerDependencies": {
