--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "build-storybook": "storybook build",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "npx prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -31,6 +34,7 @@
   "homepage": "https://github.com/ahmedalatawi/react-custom-popover#readme",
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
+    "@eslint/js": "^9.10.0",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@storybook/addon-essentials": "^8.3.0",
@@ -48,10 +52,16 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^18.3.5",
     "css-loader": "^7.1.2",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.36.1",
+    "globals": "^15.9.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup": "^4.21.3",
@@ -62,7 +72,8 @@
     "sass-loader": "^16.0.1",
     "storybook": "^8.3.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.5.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
