--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         run: yarn lint
 
       - name: Run prettier
-        run: yarn prettier
+        run: yarn format
 
       - name: Run tsc
         uses: icrawl/action-tsc@v1
